# cs454a3

./: .gitignore  CMakeLists.txt  README  makefile
include/: client_sender.h  common_defs.h  message.h  receiver.h  sender.h  server.h  server_functions.h  server_receiver.h  server_sender.h
scripts/: get_vars.sh  launch_script.sh  test.sh
src/: binder.cpp  client_functions.cpp  client_test.c  common_defs.cpp  message.cpp  param_extract.cpp  receiver.cpp  rpc_client_funcs.cpp  rpc_server_funcs.cpp  server_function.cpp  server_function_skels.c
src/binder/: binder.cpp
src/client/: client_sender.cpp  rpc_client_funcs.cpp
src/common/: common_defs.cpp  message.cpp  receiver.cpp  sender.cpp
src/server/: rpc_server_funcs.cpp  server.cpp  server_receiver.cpp  server_sender.cpp
src/test/client/: client.c  client1.c
src/test/server/: long_argtypes_server.c
test/: test.sh
test/client/: client.c  client_cache.c  client_error.c  client_long.c  client_round_robin.c  client_terminator.c
test/server/: server.c  server2.c  server_error.c
